# keti_assist_ai_robot_ros2

./: .colcon_build.sh  .gitignore  .gitmodules  README.md  container.sh  cyclonedds.xml  docker-compose.cpu.yml  docker-compose.jetpack.yml  docker-compose.nvidia.yml  docker-compose.yml  fastdds_profile.xml  requirements.txt
.build_config/: pkgs-all.txt  pkgs-control.txt  pkgs-interfaces.txt
.devcontainer/: devcontainer.json
config/orbbec_camera/: femto_bolt.yaml
docker/: Dockerfile.cpu  Dockerfile.jetpack  Dockerfile.nvidia
example_py/: arm_control_client.py  head_control_client.py
exercise_python/: app_test.py  arm_control_client.py  arm_moveit_test.py  arm_read_xyz.py  arm_toolxyz_client.py  arm_xyz_client.py  domain_bridge.py  gripper_control.client.py  head_control_client.py  lift_control_client.py  movej.py  servo_twist_pub.py  test_head.sh
exercise_python/mobile_client/: get_marker_info.py  get_pose.py  navigate_to.py  spin_absolute.py  spin_relative.py
exercise_python/motion_client/: arm_Task.py  arm_moveJ.py  arm_moveL.py  arm_moveT.py  gripper_action.py  head_move.py  lift_move.py
exercise_python/vision/: get_object_pose.py  object_tf_client.py
scripts/: build_docker.sh  call_object_marker.py  data_collect_kcare.py  data_collect_kcare.yaml  setup_network_buufer.sh  slam_sdk_install.sh
src/kaair_apps/: package.xml  setup.cfg  setup.py
src/kaair_apps/config/: app_params.yaml
src/kaair_apps/kaair_apps/: app.py  gui_base.ui  gui_main.py  kaair_api.py  ui_gui_base.py  utils.py
src/kaair_bringup/: CMakeLists.txt  package.xml
src/kaair_bringup/config/common/: femto_bolt.yaml  keti_ai_xarm7_params.yaml
src/kaair_bringup/config/maps/: kcare_lab.yaml
src/kaair_bringup/config/robots/: dure.yaml  kaair_01.yaml  kaair_specs_01.yaml  kaair_specs_02.yaml
src/kaair_bringup/kaair_bringup/master_worker/: 3d_master_controller.py  master_controller.py  master_dxl_hw.py
src/kaair_bringup/kaair_bringup/motion_worker/: arm_move_action_server.py  controller_mode_switcher.py  head_move_server.py  lift_move_action_server.py  servo_manager.py
src/kaair_bringup/kaair_bringup/server_worker/: location_server.py  object_marker_server.py  robot_pose_publisher.py  xarm_bridge.py
src/kaair_bringup/launch/: 3d_master_bringup.launch.py  bringup.launch.py  fake_bringup.launch.py  kaair_moveit_bringup.launch.py  master_bringup.launch.py  real_bringup.launch.py  real_slamtec_bringup.launch.py  robot_spec_utils.py  server_worker_loader.py  vision_runner.launch.py  vla_moveit_bringup.launch.py
src/kaair_bringup/rviz/: moveit.rviz  slamtec_moveit.rviz
src/kaair_controller/: CMakeLists.txt  package.xml
src/kaair_controller/config/: arm_controllers.yaml  body_controllers.yaml  head_controllers.yaml  kaair_controllers.yaml
src/kaair_controller/launch/: arm_control.launch.py  head_control.launch.py  lift_control.launch.py  robot_control.launch.py  tool_control.launch.py
src/kaair_description/: CMakeLists.txt  package.xml
src/kaair_description/launch/: clobot_robot_visualize.launch.py  head_visualize.launch.py  lift_visualize.launch.py  robot_visualize.launch.py
src/kaair_description/rviz/: arm_config.rviz  clober_config.rviz  head_config.rviz  lift_config.rviz  robot_config.rviz  tool_config.rviz
src/kaair_description/urdf/: clober_robot.urdf.xacro  robot.urdf.xacro
src/kaair_driver/: CMakeLists.txt  hw_plugins.xml  package.xml
src/kaair_driver/include/kaair_driver/head/: dxl_hw.hpp  head_hw_interface.hpp
src/kaair_driver/include/kaair_driver/lift/: lift_hw_interface.hpp  md485_hw.hpp  md_com.hpp
src/kaair_driver/include/kaair_driver/tool/: koras_hw.hpp  tool_hw_interface.hpp
src/kaair_driver/src/head/: dxl_hw.cpp  head_hw_interface.cpp  test_dxl.cpp
src/kaair_driver/src/lift/: lift_hw_interface.cpp  lift_initializer.cpp  lift_recovery.cpp  md485_hw.cpp  test_lift.cpp
src/kaair_driver/src/tool/: koras_hw.cpp  test_koras.cpp  tool_hw_interface.cpp
src/kaair_hardware/: CMakeLists.txt  hw_plugins.xml  package.xml
src/kaair_mobile_bridge/: CMakeLists.txt  package.xml
src/kaair_mobile_bridge/config/: dure.stcm  slam_lab.stcm
src/kaair_mobile_bridge/launch/: mobile_brinup.launch.py
src/kaair_mobile_bridge/scripts/: slam_load_map.py  slam_save_map.py  slamtec_bridge.py
src/kaair_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/kaair_moveit_config/config/: arm.ros2_control.xacro  arm_hw.urdf.xacro  body_hw.urdf.xacro  fake_arm_controllers.yaml  fake_body_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kaair.ros2_control.xacro  kaair.srdf  kaair.urdf.xacro  kaair_clober.srdf  kaair_clober.urdf.xacro  kaair_servo_config.yaml  moveit.rviz  moveit_controllers.yaml  real_moveit_controllers.yaml  ros2_controllers.yaml  sensor_3d.yaml  sensors_3d.yaml  servo_config.yaml
src/kaair_moveit_config/kaair_moveit_config/: utils.py
src/kaair_moveit_config/launch/: demo.launch.py  kaair_clober_moveit.launch.py  kaair_moveit.launch.py  kaair_moveit_servo.launch.py  launch.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/kaair_msgs/: CMakeLists.txt  package.xml
src/kaair_msgs/action/: ArmTask.action  HeadMove.action  LiftMove.action  MoveArm.action  MoveJoint.action  MoveLinear.action  MoveTool.action
src/kaair_msgs/msg/: PlaceInfo.msg  RobotStatus.msg
src/kaair_msgs/srv/: CreateObjectMarker.srv  MobileRotate.srv  MobileShift.srv  SetLiftHeight.srv
src/kaair_obstacle/: README.md  package.xml  setup.cfg  setup.py
src/kaair_obstacle/config/: instance_params.yaml  params.yaml
src/kaair_obstacle/kaair_obstacle/: obstacle_representation copy 2.py  obstacle_representation copy.py  obstacle_representation.py  scene_representation.py  scene_representation_with_sam2.py
src/kaair_obstacle/launch/: obstacle_representation.launch.py  pipeline.launch.py
src/keti_assist_ai_robot_description/: CMakeLists.txt  package.xml
src/keti_assist_ai_robot_description/rviz/: lift_config.rviz
(+47 files in other folders)
